Change content-inner line-height from 22px to 1em

--- a/development/terminalfour/src/sass/ContentTypes/_content.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_content.scss
@@ -48,7 +48,7 @@ img.border {
   width: 100%;
   // margin: 0px;
   margin-bottom: 10px;
-  line-height: 22px;
+  line-height: 1em;
   }
   h3 {
     color: #717073;
