Change styling back to custom button

--- a/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
@@ -31,73 +31,73 @@
 }
 
 // Original custom-blue-btn
-.custom-blue-btn {
-  margin-bottom: 15px;
-  width: 100%;
-  background-color: #ffffff;
-  color: #002855 !important;
-  border: 2px solid #002855 !important;
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 25px;
-  text-align: center;
-  padding: 32px 0;
-}
+// .custom-blue-btn {
+//   margin-bottom: 15px;
+//   width: 100%;
+//   background-color: #ffffff;
+//   color: #002855 !important;
+//   border: 2px solid #002855 !important;
+//   font-family: 'Gotham A', 'Gotham B', sans-serif;
+//   font-weight: 700;
+//   font-size: 18px;
+//   line-height: 25px;
+//   text-align: center;
+//   padding: 32px 0;
+// }
 
-// Original custom-red-btn 
-.custom-red-btn {
-  margin-bottom: 15px;
-  width: 100%;
-  background-color: #ffffff;
-  color: #D11242 !important;
-  border: 2px solid #D11242 !important;
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 25px;
-  text-align: center;
-  padding: 32px 0;
-}
+// // Original custom-red-btn 
+// .custom-red-btn {
+//   margin-bottom: 15px;
+//   width: 100%;
+//   background-color: #ffffff;
+//   color: #D11242 !important;
+//   border: 2px solid #D11242 !important;
+//   font-family: 'Gotham A', 'Gotham B', sans-serif;
+//   font-weight: 700;
+//   font-size: 18px;
+//   line-height: 25px;
+//   text-align: center;
+//   padding: 32px 0;
+// }
 
 // Custom-btn v2 styles
-// .custom-blue-btn {
-//   border-color: #00447c;
-//   border-width: 2px;
-//   background: #fff;
-//   color: #00447c !important;
-//   float: right;
-//   border-radius: 0px;
-//   text-transform: uppercase;
-//   // letter-spacing: 2px;
-//   font-size: 18px;
-//   font-weight: 700;
-//   // bottom: -65px;
-//   position: relative;
-//   text-align: center;
-//   height: 93px;
-//   width: 100%;
-//   margin-bottom: 15px;
-// }
+.custom-blue-btn {
+  border-color: #00447c;
+  border-width: 2px;
+  background: #fff;
+  color: #00447c !important;
+  float: right;
+  border-radius: 0px;
+  text-transform: uppercase;
+  // letter-spacing: 2px;
+  font-size: 18px;
+  font-weight: 700;
+  // bottom: -65px;
+  position: relative;
+  text-align: center;
+  height: 93px;
+  width: 100%;
+  margin-bottom: 15px;
+}
 
-// .custom-red-btn {
-//   border-color: #D11242;
-//   border-width: 2px;
-//   background: #fff;
-//   color: #D11242 !important;
-//   float: right;
-//   border-radius: 0px;
-//   text-transform: uppercase;
-//   // letter-spacing: 2px;
-//   font-size: 18px;
-//   font-weight: 700;
-//   // bottom: -65px;
-//   position: relative;
-//   text-align: center;
-//   height: 93px;
-//   width: 100%;
-//   margin-bottom: 15px;
-// }
+.custom-red-btn {
+  border-color: #D11242;
+  border-width: 2px;
+  background: #fff;
+  color: #D11242 !important;
+  float: right;
+  border-radius: 0px;
+  text-transform: uppercase;
+  // letter-spacing: 2px;
+  font-size: 18px;
+  font-weight: 700;
+  // bottom: -65px;
+  position: relative;
+  text-align: center;
+  height: 93px;
+  width: 100%;
+  margin-bottom: 15px;
+}
 
 .custom-red-btn:hover {
   transition: background-color .4s ease-in-out;
@@ -116,39 +116,39 @@
 }
 
 // Original grey btn
-.custom-grey-btn {
-  margin-bottom: 15px;
-  width: 100%;
-  background-color: #ffffff;
-  color: #717073 !important;
-  border: 2px solid #717073 !important;
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 25px;
-  text-align: center;
-  padding: 32px 0;
-}
+// .custom-grey-btn {
+//   margin-bottom: 15px;
+//   width: 100%;
+//   background-color: #ffffff;
+//   color: #717073 !important;
+//   border: 2px solid #717073 !important;
+//   font-family: 'Gotham A', 'Gotham B', sans-serif;
+//   font-weight: 700;
+//   font-size: 18px;
+//   line-height: 25px;
+//   text-align: center;
+//   padding: 32px 0;
+// }
 
 // V2 grey btn
-// .custom-grey-btn {
-//   border-color: #717073;
-//   border-width: 2px;
-//   background: #fff;
-//   color: #717073 !important;
-//   float: right;
-//   border-radius: 0px;
-//   text-transform: uppercase;
-//   // letter-spacing: 2px;
-//   font-size: 18px;
-//   font-weight: 700;
-//   // bottom: -65px;
-//   position: relative;
-//   text-align: center;
-//   height: 93px;
-//   width: 100%;
-//   margin-bottom: 15px;
-// }
+.custom-grey-btn {
+  border-color: #717073;
+  border-width: 2px;
+  background: #fff;
+  color: #717073 !important;
+  float: right;
+  border-radius: 0px;
+  text-transform: uppercase;
+  // letter-spacing: 2px;
+  font-size: 18px;
+  font-weight: 700;
+  // bottom: -65px;
+  position: relative;
+  text-align: center;
+  height: 93px;
+  width: 100%;
+  margin-bottom: 15px;
+}
 
 .custom-grey-btn:hover {
   transition: background-color .4s ease-in-out;
@@ -158,39 +158,37 @@
 }
 
 // Original black btn
-.custom-black-btn {
-  margin-bottom: 15px;
-  width: 100%;
-  background-color: #ffffff;
-  color: #000000 !important;
-  border: 2px solid #000000 !important;
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 25px;
-  text-align: center;
-  padding: 32px 0;
-}
+// .custom-black-btn {
+//   margin-bottom: 15px;
+//   width: 100%;
+//   background-color: #ffffff;
+//   color: #000000 !important;
+//   border: 2px solid #000000 !important;
+//   font-family: 'Gotham A', 'Gotham B', sans-serif;
+//   font-weight: 700;
+//   font-size: 18px;
+//   line-height: 25px;
+//   text-align: center;
+//   padding: 32px 0;
+// }
 
 // V2 black btn
-// .custom-black-btn {
-//   border-color: #000000;
-//   border-width: 2px;
-//   background: #fff;
-//   color: #000000 !important;
-//   float: right;
-//   border-radius: 0px;
-//   text-transform: uppercase;
-//   // letter-spacing: 2px;
-//   font-size: 18px;
-//   font-weight: 700;
-//   // bottom: -65px;
-//   position: relative;
-//   text-align: center;
-//   height: 93px;
-//   width: 100%;
-//   margin-bottom: 15px;
-// }
+.custom-black-btn {
+  border-color: #000000;
+  border-width: 2px;
+  background: #fff;
+  color: #000000 !important;
+  float: right;
+  border-radius: 0px;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  position: relative;
+  text-align: center;
+  height: 93px;
+  width: 100%;
+  margin-bottom: 15px;
+}
 
 .custom-black-btn:hover {
   transition: background-color .4s ease-in-out;
