Add studenthub/images/msudenver-studenthub.png to media folder

--- a/development/terminalfour/src/sass/ContentTypes/_panel.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_panel.scss
@@ -77,6 +77,7 @@
     .panel-body {
       text-align: left;
       background-color: #EFEFEF !important;
+      word-break: break-all; //added
     }
   }
 }
