--- a/development/terminalfour/src/sass/studenthubhome.scss
+++ b/development/terminalfour/src/sass/studenthubhome.scss
@@ -16,7 +16,7 @@
 // @import "ContentTypes/card";
 
 .zebra {
-  background: #7777777a;
+  background: #F7F7F7;
 }
 
 .promospace {
@@ -139,7 +139,7 @@
   padding: 5px;
   text-decoration: none;
   outline: none;
-  text-transform: uppercase;
+  //
 }
 
 .tab-container {
@@ -159,7 +159,7 @@
 // }
 //
 // footer .font-alt {
-//   text-transform: uppercase;
+//  
 //   letter-spacing: 2px;
 //   color: #1f4d69;
 // }
@@ -204,10 +204,6 @@
 }
 
 body.home {
-  background: url("https://msudenver.edu/media/studenthub/images/Campus-Background-mobile.jpg") bottom;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
   height: 100%;
   font-family: "Lato", sans-serif;
   font-weight: 400;
@@ -221,7 +217,7 @@ body.home section {
 body.home h1 {
   font-size: 40px;
   font-size: 4rem;
-  text-transform: uppercase;
+  //
   font-weight: normal;
   line-height: 0.8;
   margin: 0 0 0 40px;
@@ -233,7 +229,7 @@ body.home h2 {
   font-weight: 700;
   font-size: 22px;
   font-size: 2.2rem;
-  text-transform: uppercase;
+  //
   color: #ffffff;
   margin: 30px 0 -10px;
   position: relative;
@@ -254,7 +250,7 @@ body.home h2:before {
 body.home h3 {
   font-weight: 900;
   font-size: 2em;
-  text-transform: uppercase;
+  //
   margin: 8px 0 0;
   color: #00447C;
   // text-shadow: 0 0 7px rgba(0, 0, 0, 0.45);
@@ -275,7 +271,7 @@ body.home h4 {
   font-weight: 500;
   font-size: 18px;
   font-size: 1.8rem;
-  text-transform: uppercase;
+
   margin-bottom: 0;
   display: block;
   width: 100%;
@@ -294,8 +290,13 @@ body.home header .title {
   vertical-align: bottom;
 }
 
+body.home header {
+  background-color: #00447C;
+}
+
 body.home header .mainLogo {
-  max-width: 35%;
+  width: 35%;
+  background: none;
 }
 
 body.home .navbar-default {
@@ -341,10 +342,10 @@ body.home .services .services-btn {
   display: inline-block;
   // background: #1f4d69 url("../images/bgGrid.jpg");
   // margin: 0 -1px 1px 0;
-  background: rgb(183, 196, 206);
-  border: 3px solid #00447C;;
+  background: rgba(255, 255, 255, 0.7);
+  border: 3px solid rgba(255, 255, 255, 100);
   color: #00447C;
-  font-weight: 200;
+  font-weight: 600;
   text-align: center;
   display: block;
   font-size: 18px;
@@ -354,11 +355,18 @@ body.home .services .services-btn {
   margin-left: -15px;
   height: 5em;
   // margin: 0 -13px;
+  a {
+    font-weight: 600;
+  }
 }
 
 body.home .services .services-btn:hover {
-  background: #1f4d69;
+  background: #00447c;
   text-decoration: none;
+  a {
+    color: rgba(255, 255, 255, 0.7);
+    background-color: #00447c;
+  }
 }
 
 body.home .services a {
@@ -463,12 +471,12 @@ body.home .calendar .title .main {
 }
 
 body.home .calendar .title .semester {
-  text-transform: uppercase;
+  //
 }
 
 body.home .calendar .title .year {
   font-family: "Lato", sans-serif;
-  text-transform: uppercase;
+  //
   margin-right: 10px;
 }
 
@@ -491,18 +499,25 @@ body.home .calendar .day {
   height: 145px;
   border: 1px solid rgba(255, 255, 255, 0.5);
   padding: 10px;
-  background-color: rgba(30, 74, 101, 0.72);
+  color: #fff;
+  background-color: rgba(209, 16, 66, 100);
 }
 
 body.home .calendar .day:hover {
-  background: rgba(30, 74, 101, 0.9);
+  background-color: #fff;
+  .date {
+    color: rgba(209, 16, 66, 100);
+  }
+  .event {
+    color: rgba(209, 16, 66, 100);
+  }
 }
 
 body.home .calendar .day .date {
   color: #ffffff;
   font-size: 12px;
   font-size: 1.2rem;
-  text-transform: uppercase;
+
   font-weight: 400;
 }
 
@@ -512,7 +527,7 @@ body.home .calendar .day .event {
   font-weight: 300;
   font-size: 14px;
   font-size: 1.4rem;
-  text-transform: uppercase;
+
   line-height: 1.3;
   margin-top: 10px;
 }
@@ -539,18 +554,18 @@ body.home .red {
 }
 
 body.home .white {
-  background: whitesmoke;
+  color: #707070;
   padding: 10px;
-  border: 3px solid #00447C;
+  border: 3px solid rgba(122, 122, 122, 0.5);
   margin-left: 5px;
   margin-top: 10px;
   margin-right: 5px;
+  font-weight: 600;
 }
 
 .left-column {
   margin-bottom: 5px;
   text-align: center;
-  text-transform: uppercase;
 }
 
 .middle-column [class*="col-"] {
@@ -561,7 +576,6 @@ body.home .white {
   font-weight: 200;
   font-size: 18px;
   font-size: 1.8rem;
-  text-transform: uppercase;
   margin-bottom: 0;
   display: block;
   width: 100%;
@@ -745,7 +759,6 @@ body.home .module-small [class*="col-"] {
     font-size: 12px;
     font-size: 1.2rem;
     color: #ffffff;
-    text-transform: uppercase;
     margin-right: 12px;
     letter-spacing: 1px;
   }
