--- a/www-root/style-assets/css/studenthubhome.css
+++ b/www-root/style-assets/css/studenthubhome.css
@@ -376,7 +376,14 @@ h4 {
   overflow: hidden;
 }
 
-.promospace .promotab1 h3,
+.promospace .promotab1 h3 {
+  color: #00447C;
+  margin-top: 25px;
+  margin-bottom: 5px;
+  font-size: 15px;
+  font-size: 1.5rem;
+}
+
 .promospace .promotab2 h3,
 .promospace .promotab3 h3 {
   color: #ffffff;
@@ -393,7 +400,14 @@ h4 {
 }
 
 .promospace .promotab1 a,
-.promospace .promotab1 p,
+.promospace .promotab1 p {
+  font-size: 14px;
+  color: #00447c;
+  font-weight: 200;
+  padding-bottom: 15px;
+  margin: 0 15px;
+}
+
 .promospace .promotab2 a,
 .promospace .promotab2 p,
 .promospace .promotab3 a,
@@ -419,15 +433,19 @@ h4 {
 }
 
 .promotab1 {
-  background: #e67e22;
+  background: #FFF;
+  border-top: 3px solid #FFFFFF;
 }
 
 .promotab2 {
-  background: #16a085;
+  background: #d11242;
+  border-top: 3px solid #FFFFFF;
 }
 
 .promotab3 {
-  background: #8e44ad;
+  background: #707a7a;
+  border-top: 3px solid #FFFFFF;
+  border-bottom: 3px solid #FFFFFF;
 }
 
 .fa-chevron-right {
@@ -463,29 +481,27 @@ h4 {
     padding: 0;
   }
 
-  .promospace .promotab1 {
-    background: rgba(230, 126, 34, 0.75);
-    border-top: 3px solid #d35400;
-    border-bottom: 3px solid #d35400;
+  .promotab1 {
+    background: #fff;
+    border-top: 3px solid #FFFFFF;
   }
 
-  .promospace .promotab2 {
-    background: rgba(0, 118, 95, 0.75);
-    border-top: 3px solid #00765f;
-    border-bottom: 3px solid #00765f;
+  .promotab2 {
+    background: #d11242;
+    border-top: 3px solid #FFFFFF;
   }
 
-  .promospace .promotab3 {
-    background: rgba(102, 0, 142, 0.75);
-    border-top: 3px solid #66008e;
-    border-bottom: 3px solid #66008e;
+  .promotab3 {
+    background: #707a7a;
+    border-top: 3px solid #FFFFFF;
+    border-bottom: 3px solid #FFFFFF;
   }
 }
 #tabs li a {
   height: 57px;
+  font-weight: 600;
   font-family: "Lato", sans-serif;
   font-size: 13px;
-  color: #fff;
   padding: 5px;
   text-decoration: none;
   outline: none;
@@ -544,7 +560,7 @@ body.home h2:before {
 }
 
 body.home h3 {
-  font-weight: 900;
+  font-weight: 600;
   font-size: 2em;
   margin: 8px 0 0;
   color: #00447C;
@@ -622,11 +638,14 @@ body.home .services .services-btn {
   font-weight: 600;
   text-align: center;
   display: block;
-  font-size: 18px;
   font-size: 1.8rem;
-  margin-top: 5px;
-  margin-left: -15px;
+  margin-top: 10px;
+  margin-left: -7px;
+  margin-right: -7px;
   height: 5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 body.home .services .services-btn a {
   font-weight: 600;
@@ -637,14 +656,13 @@ body.home .services .services-btn:hover {
   text-decoration: none;
 }
 body.home .services .services-btn:hover a {
-  color: rgba(255, 255, 255, 0.7);
+  color: white;
   background-color: #00447c;
 }
 
 body.home .services a {
   color: #00447C;
   font-weight: 200;
-  padding: 20px 0;
   text-align: center;
   display: block;
   font-size: 18px;
@@ -858,7 +876,8 @@ body.home .white {
 }
 
 a .white:hover {
-  background: #d8d8d8;
+  background: #707070;
+  color: #fff;
 }
 
 body.home .module-small {
