--- a/development/terminalfour/src/sass/studenthubhome.scss
+++ b/development/terminalfour/src/sass/studenthubhome.scss
@@ -16,9 +16,9 @@
 // @import "ContentTypes/card";
 
 .promospace {
-  margin-top: 30px;
+  margin-top: 15%;
   position: relative;
-  padding: 10px 0;
+  padding: 65px 0;
   overflow: hidden;
 }
 
@@ -79,8 +79,8 @@
 }
 
 .promotab1 {
-  background: rgb(0,55,101);
- 
+  background: #FFFFFF;
+  color: rgb(0, 55, 101);
 }
 
 .promotab2 {
@@ -148,7 +148,7 @@
   font-family: "Lato", sans-serif;
   font-weight: 600;
   font-size: 10px;
-  color: rgba(0,55,101);
+ // color: rgba(0,55,101);
   padding: 5px;
   text-transform: inherit;
   text-decoration: none;
@@ -156,7 +156,7 @@
 }
 
 .tab-container {
-  height: 189px;
+  height: 185px;
   color: rgb(115, 129, 115);
   border-top: 3px solid;
   border-bottom: 2px solid;
@@ -241,7 +241,7 @@ body.home h2 {
   font-size: 22px;
   font-size: 2.2rem;
   color: #ffffff;
-  margin: 30px 0 -10px;
+  margin: 30px 0 10px;
   position: relative;
   letter-spacing: 1px;
   z-index: 99;
@@ -249,12 +249,13 @@ body.home h2 {
 
 
 body.home h3 {
-  font-weight: 900;
+  font-weight: 600;
   font-size: 18px;
   font-size: 1.8rem;
   margin: 8px 0 0;
-  color: #ffffff;
-  text-shadow: 0 0 7px rgba(0, 0, 0, 0.45);
+  color: #00447c;
+ // text-shadow: 0 0 7px rgba(0, 0, 0, 0.45);
+   text-decoration: inherit;
 }
 
 
@@ -339,6 +340,7 @@ body.home .services .services-btn {
   font-size: 1.8rem;
   height: 80px;
   margin-bottom: 10px;
+  margin-left: -15px;
  
 }
 
@@ -359,8 +361,9 @@ body.home .services a {
 }
 
 body.home .services a:hover {
-  background: #1f4d69;
+  background: #00447c;
   text-decoration: none;
+  color: white;
 }
 
 body.home .content {
@@ -374,7 +377,6 @@ body.home .content {
   align-items: center;
   min-height: 116px;
 }
-
 body.home .content .text-center {
   width: 100%;
 }
@@ -383,11 +385,20 @@ body.home .content .text-center:hover {
   text-decoration: none;
 }
 
-body.home .content .description {
-  font-size: 1em;
-  font-weight: 300;
+body.home .white:hover{
+  background: #707070;
+  color: white;
+  border: 10px solid #adadad;
 }
 
+body.home .content .description {
+  font-size: 1.5em;
+ // font-weight: 300;
+  color: #00447c;
+  }
+body.home .zebra{
+  background: #F7F7F7;
+}
 body.home .newsfeed {
   height: 115px;
   overflow: hidden;
@@ -397,6 +408,8 @@ body.home .newsfeed h4 {
   margin-top: 0;
   font-weight: 300;
 }
+
+
 
 body.home .newsfeed p {
   text-transform: none;
@@ -448,8 +461,6 @@ body.home .calendar .title .main {
   font-size: 2.4rem;
 }
 
-body.home .calendar .title .semester {
-}
 
 body.home .calendar .title .year {
   font-family: "Lato", sans-serif;
@@ -476,10 +487,17 @@ body.home .calendar .day {
   border: 1px solid rgba(255, 255, 255, 0.5);
   padding: 10px;
   background-color: rgba(209, 16, 66, 100) ;
+  font-weight: 400;
 }
 
 body.home .calendar .day:hover {
-  background: rgba(30, 74, 101, 0.9);
+  background: white;
+  .date{
+    color: rgba(209, 16, 66, 100);
+  }
+ .event{
+   color: rgba(209, 16, 66, 100);
+ }
 }
 
 body.home .calendar .day .date {
@@ -497,6 +515,7 @@ body.home .calendar .day .event {
   font-size: 1.4rem;
   line-height: 1.3;
   margin-top: 10px;
+  font-weight: 400;
 }
 
 body.home .black {
@@ -505,6 +524,10 @@ body.home .black {
   color: #ffffff;
   border-bottom: 1px solid rgba(255, 255, 255, 0.7);
 }
+ 
+//body.white .content{
+ // color: black;
+//}
 
 body.home .blue {
   background: #2897d1;
@@ -512,7 +535,14 @@ body.home .blue {
   color: #ffffff;
   border-bottom: 1px solid rgba(255, 255, 255, 0.7);
 }
-
+body.home .white {
+  background:white;
+  padding: 10px;
+  color: #707070;
+  font-weight: 600;
+  margin-bottom: 10px;
+  border: 3px solid rgba(122, 122, 122, .5);
+}
 body.home .red {
   background:white;
   padding: 10px;
@@ -539,7 +569,7 @@ body.home .red {
   margin-bottom: 0;
   display: block;
   width: 100%;
-  color: #ffffff;
+  color: #00447c;
 }
 
 .middle-column a:hover {
@@ -773,7 +803,7 @@ body.home .module-small [class*="col-"] {
     width: 57px;
     height: 57px;
     background: url("../images/sticker.png") no-repeat center bottom;
-    content: '';
+   
     vertical-align: bottom;
     margin: 0 15px 0 -20px;
   }
