--- a/www-root/style-assets/css/studenthubhome.css
+++ b/www-root/style-assets/css/studenthubhome.css
@@ -366,9 +366,9 @@ h4 {
 }
 
 .promospace {
-  margin-top: 30px;
+  margin-top: 15%;
   position: relative;
-  padding: 10px 0;
+  padding: 65px 0;
   overflow: hidden;
 }
 
@@ -429,7 +429,8 @@ h4 {
 }
 
 .promotab1 {
-  background: #003765;
+  background: #FFFFFF;
+  color: #003765;
 }
 
 .promotab2 {
@@ -496,7 +497,6 @@ h4 {
   font-family: "Lato", sans-serif;
   font-weight: 600;
   font-size: 10px;
-  color: #003765;
   padding: 5px;
   text-transform: inherit;
   text-decoration: none;
@@ -504,7 +504,7 @@ h4 {
 }
 
 .tab-container {
-  height: 189px;
+  height: 185px;
   color: #738173;
   border-top: 3px solid;
   border-bottom: 2px solid;
@@ -540,19 +540,19 @@ body.home h2 {
   font-size: 22px;
   font-size: 2.2rem;
   color: #ffffff;
-  margin: 30px 0 -10px;
+  margin: 30px 0 10px;
   position: relative;
   letter-spacing: 1px;
   z-index: 99;
 }
 
 body.home h3 {
-  font-weight: 900;
+  font-weight: 600;
   font-size: 18px;
   font-size: 1.8rem;
   margin: 8px 0 0;
-  color: #ffffff;
-  text-shadow: 0 0 7px rgba(0, 0, 0, 0.45);
+  color: #00447c;
+  text-decoration: inherit;
 }
 
 body.home h4 {
@@ -630,6 +630,7 @@ body.home .services .services-btn {
   font-size: 1.8rem;
   height: 80px;
   margin-bottom: 10px;
+  margin-left: -15px;
 }
 
 body.home .services .services-btn:hover {
@@ -649,8 +650,9 @@ body.home .services a {
 }
 
 body.home .services a:hover {
-  background: #1f4d69;
+  background: #00447c;
   text-decoration: none;
+  color: white;
 }
 
 body.home .content {
@@ -673,9 +675,19 @@ body.home .content .text-center:hover {
   text-decoration: none;
 }
 
+body.home .white:hover {
+  background: #707070;
+  color: white;
+  border: 10px solid #adadad;
+}
+
 body.home .content .description {
-  font-size: 1em;
-  font-weight: 300;
+  font-size: 1.5em;
+  color: #00447c;
+}
+
+body.home .zebra {
+  background: #F7F7F7;
 }
 
 body.home .newsfeed {
@@ -758,10 +770,17 @@ body.home .calendar .day {
   border: 1px solid rgba(255, 255, 255, 0.5);
   padding: 10px;
   background-color: #d11042;
+  font-weight: 400;
 }
 
 body.home .calendar .day:hover {
-  background: rgba(30, 74, 101, 0.9);
+  background: white;
+}
+body.home .calendar .day:hover .date {
+  color: #d11042;
+}
+body.home .calendar .day:hover .event {
+  color: #d11042;
 }
 
 body.home .calendar .day .date {
@@ -779,6 +798,7 @@ body.home .calendar .day .event {
   font-size: 1.4rem;
   line-height: 1.3;
   margin-top: 10px;
+  font-weight: 400;
 }
 
 body.home .black {
@@ -793,6 +813,15 @@ body.home .blue {
   padding: 10px;
   color: #ffffff;
   border-bottom: 1px solid rgba(255, 255, 255, 0.7);
+}
+
+body.home .white {
+  background: white;
+  padding: 10px;
+  color: #707070;
+  font-weight: 600;
+  margin-bottom: 10px;
+  border: 3px solid rgba(122, 122, 122, 0.5);
 }
 
 body.home .red {
@@ -820,7 +849,7 @@ body.home .red {
   margin-bottom: 0;
   display: block;
   width: 100%;
-  color: #ffffff;
+  color: #00447c;
 }
 
 .middle-column a:hover {
@@ -1019,7 +1048,6 @@ body.home .module-small [class*=col-] {
     width: 57px;
     height: 57px;
     background: url("../images/sticker.png") no-repeat center bottom;
-    content: "";
     vertical-align: bottom;
     margin: 0 15px 0 -20px;
   }
