--- a/development/terminalfour/src/sass/studenthubhome.scss
+++ b/development/terminalfour/src/sass/studenthubhome.scss
@@ -231,7 +231,7 @@ body.home h1 {
   font-size: 4rem;
   font-weight: normal;
   line-height: 0.8;
-  margin: 0 0 0 40px;
+  margin: 0 0 25px 40px;
   color: #ffffff;
   font-weight: 700;
 }
@@ -293,7 +293,7 @@ body.home .navbar-default {
 }
 
 body.home .navbar-default .navbar-header {
-  background: #1f4d69;
+  background: #00447c;
 }
 
 body.home .navbar-default .navbar-collapse,
@@ -345,7 +345,7 @@ body.home .services .services-btn {
 }
 
 body.home .services .services-btn:hover {
-  background: #1f4d69;
+  background: #00447c;
   text-decoration: none;
 }
 
@@ -364,6 +364,7 @@ body.home .services a:hover {
   background: #00447c;
   text-decoration: none;
   color: white;
+  
 }
 
 body.home .content {
